2016-09-06	Michel Boaventura <michel.boaventura@gmail.com>

    * Finishing autotools conversion
    * Making cmocka a optional dependency
    * Using AC_PROG_CC_C_O
    * We need CMocka version >= 1.0.0