@@ -4,3 +4,4 @@
     * Making cmocka a optional dependency
     * Using AC_PROG_CC_C_O
     * We need CMocka version >= 1.0.0
+    * Enable by default tcmalloc
